# emforecaster

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py
emforecaster/analysis/general/: adf.py  amplitudes.py  analysis.py  arima.py  bar_graph.py  lambda_plot.py  multibar_graph.py  plotting.py
emforecaster/analysis/neptune/: compile_results.py  get_results.py  post_hoc.py  stats.py
emforecaster/analysis/neptune/ablations/: cnn.yaml  dlinear.yaml  lstm.yaml  mlp.yaml  (+5 more)
emforecaster/config/: config.py
emforecaster/conformal/: coverage.py  tradeoff.py
emforecaster/exp/: exp.py
emforecaster/jobs/hpc/: submit.py
emforecaster/layers/modern_tcn/: backbone.py  utils.py
emforecaster/layers/patchtst/: backbone.py  enc_block.py  revin.py
emforecaster/layers/rocket/: random_kernels.py
emforecaster/layers/shapelets/: shap.py
emforecaster/layers/timesnet/: embed.py  inception_block.py  timesblock.py
emforecaster/layers/wavelets/: cwt.py  dwt.py  purturbation.py  transform.py
emforecaster/models/: dlinear.py  emforecaster.py  linear.py  mamba.py  modern_tcn.py  patchtst.py  recurrent.py  rf_emf_baselines.py  rocket.py  timesnet.py  tsmixer.py
emforecaster/tuning/: tune.py
emforecaster/tuning/scripts/: run1.sh  run2.sh  run3.sh  run4.sh
emforecaster/utils/: calibration.py  classification.py  dataloading.py  datasets.py  logger.py  models.py  schedulers.py  sincos_pos_emb.py  train.py  utils.py  wavelets.py
emforecaster/utils/archived/: data_factory.py  data_loader.py  dataloading.py
templates/: index.html  result.html
(+36 files in other folders)
