[tool.poetry]
name = "emforecaster"
version = "0.1.0"
description = "EMForecaster official repository."
authors = ["Xavier Mootoo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/xmootoo/emforecaster" # Update with actual repo URL if available
keywords = ["forecasting", "machine learning"]         # Add relevant keywords

[tool.poetry.dependencies]
python = ">=3.10,<4.0" # Added upper bound for Python compatibility
torch = "^2.6.0"       # Already installed
neptune = "^1.13.0"    # Will now be compatible
scikit-learn = "^1.6.1"
pydantic = "^2.11.1"
rich = "^14.0.0"
tslearn = "^0.6.3"
mambapy = "^1.2.0"
torchmetrics = "^1.7.0"
python-dotenv = "^1.1.0"
numba = "^0.61.0"

[tool.poetry.group.dev.dependencies]
# Development dependencies
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
